@@ -31,11 +31,6 @@ struct frame_saved_regs;
 
 #define TARGET_BYTE_ORDER LITTLE_ENDIAN
 
-/* Define this if the C compiler puts an underscore at the front
-   of external names before giving them to the linker.  */
-
-#define NAMES_HAVE_UNDERSCORE
-
 #define NUM_REGS 38
 
 #define REGISTER_NAMES \
